force-app/main/default/objects/Inbound_Request_NEPAL__c/Inbound_Request_NEPAL__c.object-meta.xml
<CustomObject>
    <label>Inbound Request NEPAL</label>
    <nameField>
        <displayFormat>IR-NEPAL-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Requests NEPAL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>