force-app/main/default/objects/Inbound_Request_NEPAL__c/fields/Email_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_Time__c</fullName>
    <label>Email Time</label>
    <type>DateTime</type>
</CustomField>