force-app/main/default/objects/Inbound_Request_NEPAL__c/fields/Last_Reply_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Reply_At__c</fullName>
    <label>Last Reply At</label>
    <type>DateTime</type>
</CustomField>