force-app/main/default/objects/Inbound_Request_NEPAL__c/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>